# python-stiebel-eltron

./: .devcontainer.json  LICENSE  README.md  example.py  pyproject.toml  wpm-example.py
.github/workflows/: lint_test.yml  release-to-pypi.yml  test-latest-pymodbus.yml  test-python-package.yml
api/: README.md  lwz_energy_data.csv  lwz_energy_management_settings.csv  lwz_energy_system_information.csv  lwz_system_values.csv  wpm_energy_data.csv  wpm_energy_management_settings.csv  wpm_energy_system_information.csv  wpm_power_consumption.csv  wpm_system_parameters.csv  wpm_system_state.csv  wpm_system_values.csv
examples/: wpm.py
pystiebeleltron/: __init__.py  lwz.py  pystiebeleltron.py  wpm.py  wpm3i.py
scripts/: gen.sh  generate.py  query.py
scripts/templates/: lwztemplate.j2  lwztemplate.jinja  module.py.j2  wpmtemplate.j2  wpmtemplate.jinja
src/examples/: wpm.py
src/python_stiebel_eltron/: __init__.py  lwz.py  wpm.py
test/: mock_modbus_server.py  test_pystiebeleltron.py  test_stiebel_eltron.py
tests/: test_stiebel_eltron.py
