[project]
name = "python-stiebel-eltron"
version = "0.1.0"
description = "Stiebel Eltron python api library."
readme = "README.md"
authors = [
    { name = "Paul Frank", email = "pail@gmx.net" }
]
requires-python = ">=3.13"
dependencies = [
    "pymodbus>=3.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jinja2>=3.1.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.6",
]

[tool.ruff]
line-length = 200

[tool.pytest.ini_options]

pythonpath = [
  ".",
]
testpaths = [
    "tests"
]
